Added argument support for country

--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "commander": "^5.0.0",
     "ervy": "^1.0.7",
     "i18n-iso-countries": "^5.1.0",
-    "request": "^2.88.2"
+    "request": "^2.88.2",
+    "validator": "^13.0.0"
   },
   "devDependencies": {
     "js-beautify": "^1.10.3"
